cf_template/Launch_Ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Demo use
Parameters:
  NetworkStackName:
    Description: Name of the Network CloudFormation stack.
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
  EC2InstanceType:
    Description: Provide the size of EC2 instance. Default is t2.micro.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
  EC2InstanceKey:
    Description: Provide the key name of EC2 instance.
    Type: String
    MinLength: 1
    MaxLength: 25
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
Resources:
  DemoWebSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: Demo-Web-SG
      GroupDescription: SecurityGroup for demo Web Instance.
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
      VpcId: !ImportValue 
        'Fn::Sub': '${NetworkStackName}-VPCID'
  DemoWebEc2:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref EC2InstanceType
      ImageId: ami-0bea7fd38fabe821a
      IamInstanceProfile: !Ref S3BucketsInstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: '8'
            VolumeType: gp2
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum install -y ruby
            yum install -y aws-cli
            cd /home/ec2-user/
            aws s3 cp 's3://aws-codedeploy-ap-northeast-2/latest/codedeploy-agent.noarch.rpm' . --region ap-northeast-2
            yum -y install codedeploy-agent.noarch.rpm
      SubnetId: !ImportValue 
        'Fn::Sub': '${NetworkStackName}-SubnetID01'
      SecurityGroupIds:
        - !Ref DemoWebSG
      Monitoring: false
      KeyName: !Ref EC2InstanceKey
      Tags:
        - Key: Name
          Value: Demo-Web
  S3BucketsInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref S3BucketsRole
  S3BucketsPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: S3BucketsPolicy
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action:
              - 's3:*'
            Resource: '*'
      Roles:
        - !Ref S3BucketsRole
  S3BucketsRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
  DevelopEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      InstanceId: !Ref DemoWebEc2
